[SERHATGUZEL][THY] - some fixes